[project]
name = "image-excluder"
version = "0.1.0"
description = "A Streamlit app for reviewing and excluding pyramid tiled TIFF images with OpenSeadragon viewer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyvips>=2.2.3",
    "streamlit>=1.46.1",
    "uvicorn>=0.24.0",
]
